[docs update]jvm垃圾回收部分内容精简